syntax = "proto3";

package logic.v1beta2;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "logic/v1beta2/params.proto";
import "logic/v1beta2/types.proto";

option go_package = "github.com/okp4/okp4d/x/logic/types";

// QueryService defines the gRPC querier service.
service QueryService {
  // Params queries all parameters for the logic module.
  rpc Params(QueryServiceParamsRequest) returns (QueryServiceParamsResponse) {
    option (google.api.http).get = "/okp4/okp4d/logic/params";
  }

  // Ask executes a logic query and returns the solutions found.
  // Since the query is without any side-effect, the query is not executed in the context of a transaction and no fee
  // is charged for this, but the execution is constrained by the current limits configured in the module.
  rpc Ask(QueryServiceAskRequest) returns (QueryServiceAskResponse) {
    option (google.api.http).get = "/okp4/okp4d/logic/ask";
  }
}

// QueryServiceParamsRequest is request type for the QueryService/Params RPC method.
message QueryServiceParamsRequest {}

// QueryServiceParamsResponse is response type for the QueryService/Params RPC method.
message QueryServiceParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"params\",omitempty"
  ];
}

// QueryServiceAskRequest is request type for the QueryService/Ask RPC method.
message QueryServiceAskRequest {
  option (gogoproto.goproto_stringer) = true;

  // program is the logic program to be queried.
  string program = 1 [(gogoproto.moretags) = "yaml:\"program\",omitempty"];
  // query is the query string to be executed.
  string query = 2 [(gogoproto.moretags) = "yaml:\"query\",omitempty"];
  repeated string exts = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// QueryServiceAskResponse is response type for the QueryService/Ask RPC method.
message QueryServiceAskResponse {
  option (gogoproto.goproto_stringer) = true;

  // height is the block height at which the query was executed.
  uint64 height = 1 [(gogoproto.moretags) = "yaml:\"height\",omitempty"];
  // gas_used is the amount of gas used to execute the query.
  uint64 gas_used = 2 [(gogoproto.moretags) = "yaml:\"gas_used\",omitempty"];
  // answer is the answer to the query.
  Answer answer = 3 [(gogoproto.moretags) = "yaml:\"answer\",omitempty"];
  // user_output is the output of the query execution, if any.
  // the length of the output is limited by the max_query_output_size parameter.
  string user_output = 4 [(gogoproto.moretags) = "yaml:\"user_output\",omitempty"];
}
